# shawn-hymel-embedded-rust

./: .gitignore  Dockerfile
notes/: 01-What-is-Rust.md  02-Blink-an-LED.md  03-USB-Serial-Logging-and-Debugging.md  04-Ownership-and-Borrowing.md  05-Reading-from-an-I2C-Temperature-Sensor.md  06-Generics-and-Traits.md  07-Creating-a-TMP102-Driver-Library-and-Crate.md  08-Lifetimes-and-Lifetime-Annotations.md  09-Test-Driven-Development.md  10-Interrupts.md  11-Logging-with-defmt-and-Step-through-Debugging.md  12-Async-Programming-with-Embassy.md  README.md  index.md
notes/transcripts/: 01-What-is-Rust.txt  02-Blink-an-LED.txt  03-USB-Serial-Logging-and-Debugging.txt  04-Ownership-and-Borrowing.txt  05-Reading-from-an-I2C-Temperature-Sensor.txt  06-Generics-and-Traits.txt  07-Creating-a-TMP102-Driver-Library-and-Crate.txt  08-Lifetimes-and-Lifetime-Annotations.txt  09-Test-Driven-Development.txt  10-Interrupts.txt  11-Logging-with-defmt-and-Step-through-Debugging.txt  12-Async-Programming-with-Embassy.txt
workspace/apps/generics-examples/src/: main.rs
workspace/apps/led-wrapper/src/: main.rs
workspace/apps/rp2040-blinky/: Cargo.toml  memory.x
workspace/apps/rp2040-blinky/src/: main.rs
workspace/apps/rp2040-led-wrapper/: Cargo.toml
workspace/apps/rp2040-led-wrapper/.cargo/: config.toml
workspace/apps/rp2040-led-wrapper/src/: main.rs
workspace/apps/rp2040-usb-serial/: Cargo.toml  memory.x
workspace/apps/rp2040-usb-serial/src/: main.rs
